@@ -88,19 +88,73 @@
 			[row]
 
 				[column]
-					border = "all"
-					border_size = 5
-					horizontal_alignment = "center"
 
-					[button]
-						# This button will be shown or hidden depending on the
-						# whether or not a scrollbar is needed to show the
-						# text.
-						id = "ok"
-						definition = "default"
+					[grid]	
 
-						label = "close"
-					[/button]
+						[row]
+
+							# This button will be shown or hidden depending on the
+							# whether or not a scrollbar is needed to show the
+							# text.
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "center"
+
+								[button]
+									id = "left_side"
+									definition = "default"
+
+									label = ""
+								[/button]
+
+							[/column]
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "center"
+
+								[button]
+									id = "cancel"
+									definition = "default"
+
+									label = _ "Cancel"
+								[/button]
+
+							[/column]
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "center"
+
+								[button]
+									id = "ok"
+									definition = "default"
+
+									label = _ "Close"
+								[/button]
+
+							[/column]
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "center"
+
+								[button]
+									id = "right_side"
+									definition = "default"
+
+									label = ""
+								[/button]
+
+							[/column]
+
+						[/row]
+
+					[/grid]
 
 				[/column]
 
@@ -111,3 +165,4 @@
 	[/resolution]
 
 [/window]
+
